--- a/paginas/esqueciMinhaSenha.phtml
+++ b/paginas/esqueciMinhaSenha.phtml
@@ -3,21 +3,20 @@
 
         <h2>ESQUECEU SUA SENHA?</h2>
 
-        <form action="redefinirSenha" method="post" class="form" id="form">
+        <form method="POST" class="form" id="form">
 
-            <input type="email" class="required" name="email" id="email" oninput="emailValidate()" placeholder="E-mail" required>
-            <span class="span-required" style="margin:5px 0 0 10px; color:red; display: none;">E-mail inválido</span>
+    <input type="email" name="email" placeholder="E-mail" required>
 
-            <input type="Name" placeholder="Nome Completo" style="margin: 20px 0 0 0;" required>
+    <input type="text" name="nome" placeholder="Nome Completo" style="margin: 20px 0 0 0;" required>
 
-            <div class="btn_login">
-                <a id="link" href="login">Voltar</a>
-                <button id="link" type="submit">Confirmar</button>
-            </div>
-        </form>
+    <div class="btn_login">
+        <a href="login" id="link">Voltar</a>
+        <button type="submit" id="link">Confirmar</button>
+    </div>
+</form>
 
         <a href="login">Entrar em uma conta Existente</a>
     </div>
-
-    
 </section>
+
+<script src="paginas/validacoes/senha/port_senha.js"></script> 
