--- a/paginas/carrinho.phtml
+++ b/paginas/carrinho.phtml
@@ -1,3 +1,31 @@
 <section id="main_carrinho">
+    <h3>Carrinho</h3>
+    <div class="carrinho_flex">
+        <div class="conteiner_produtos">
+            <div class="produto">
+                <div class="imagem">
+                    <img src="imagens/produtos/dellXPS13.png">
+                </div>
+                <div class="descricao_flex">
+                    <div class="descricao">
+                        <p class="titulo">iPhone 16 Pro Max Apple 512GB, Câmera Tripla de 48MP, Tela... </p>
+                        <p class="sub_preco"><span>10x de R$7.800,00</span> sem juros</p>
+                    </div>
+                    <div class="controller">
+                        <p>R$45.567,00</p>
+                        <p class="btn"><span>-</span> 1 <span>+</span></p>
+                        <a><i class="bi bi-trash3"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="conteiner_info_flex">
+            <div class="conteiner_info1">
+
+            </div>
+            <div class="conteiner_cep"></div>
+
+        </div>
+    </div>
 
 </section>
